# email_pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.example.yaml  pyproject.toml  readme.md  setup.sh
builtins/bgt_payroll/: .env.example  plugin.py  readme.md  requirements.txt
builtins/bollo/: config.example.json  plugin.py
builtins/cloner/: .env.example  config.example.json  plugin.py  readme.md
builtins/iren/: iren_helpers.py  plugin.py
builtins/octopus/: plugin.py  readme.md
builtins/publiacqua/: plugin.py
plugins/aruba/: plugin.py  readme.md
plugins/bgt_payroll/: plugin.py
plugins/bollo/: plugin.py  readme.md
plugins/directa_transaction/: plugin.py  readme.md
plugins/iren/: .env.example  .gitignore  bootstrap.py  invoices_not_found.py  iren_helpers.py  logger.py  plugin.py  readme.md  requirements.txt
plugins/octopus/: config.example.json  plugin.py  readme.md
plugins/publiacqua/: plugin.py  readme.md  requirements.txt
plugins/tim/: plugin.py  readme.md  requirements.txt
src/email_pipeline/: env.py  logger.py  main.py  processor.py
src/email_pipeline/plugins/: lookup_file_saver.py  selenium_utils.py
src/email_pipeline/plugins/engine/: execution.py  subprocess_run.py  venv.py
src/mail_pipeline/: client.py  logger.py  main.py  plugin_engine.py  processor.py  state.py
src/mail_pipeline/plugins/: engine.py  filesystem.py  lookup_file_saver.py  selenium_utils.py
src/mail_pipeline/plugins/engine/: data.py  execution.py  subprocess_run.py  venv.py
